# Fractal_Engine

./: .gitignore  .gitmodules  .sconsign.dblite  AIengine.sln  AIengine.vcxproj  AIengine.vcxproj.filters  CMakeLists.txt  CmakeLists.txt  Deploy.bat  Deploy.sh  LICENSE  MakeFile  README.MD  README.md  SConstruct  lib.sh  premake5.lua
App/: imgui.ini
Dependencies/: README.md
Editor/: CMakeLists.txt
Editor/Resource/Scene/: scene.fr
Editor/Resource/Shaders/: GridV.shader
Editor/Source/: App.cpp
Editor/Source/Components/: Gizmo3D.h
Editor/Source/Editor/: UiLayer.cpp  UiLayer.h
Editor/Source/Editor/CompUIs/: CameraUI.h  CompUI.h  ModelRenderUI.h  NameTagUI.h  PointLightUI.h  RigidbodyUI.h
Editor/Source/Editor/Controls/: Widgets.h
Editor/Source/Editor/Panels/: MenuBar.h  Resources.h
Editor/Source/Systems/: EditorCameraSystem.h
Editor/Source/VendorE/GUIZMO/: ImGuizmo.cpp
Editor/Source/VendorE/IMGUI/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imstb_rectpack.h
Engine/: CMakeLists.txt  premake5.lua
Engine/Source/: App.cpp  pch.h
Engine/Source/Audio/: Audio.cpp  Audio.h  Sound.h  cute_sound.h
Engine/Source/Core/: Engine.cpp  Engine.h  Errors.h  Helpers.h  Log.h  MemoryFunctions.h  String.h  Systems.h  Window.cpp  Window.h  XMLSerializer.h
Engine/Source/Core/Components/: Camera.h  Camera2D.h  EntityName.h  KeyMotion.h  MeshRenderer.h  ModelRenderer.h  PointLight.h  RigidBody.h  SpotLight.h  SpriteRenderer.h  Transform.h
Engine/Source/Core/ECS/: ECS.h  Systems.h
Engine/Source/Core/ECS/Base/: CompList.h
Engine/Source/Core/ECS/Components/: Camera.h  DirectionalLight.h  Gizmo3D.h  KeyMotion.h  ModelRenderer.h  RigidBody.h  SpotLight.h  Transform.h
Engine/Source/Core/ECS/Systems/: CameraSystem.h  EditorCameraSystem.h  GridRendererSystem.h  MeshRendererSystem.h  ModelRendererSystem.h  PhysicsSystem.h  PointLightSystem.h  SpotLightSystem.h
Engine/Source/Core/Errors/: Errors.cpp  Errors.h
Engine/Source/Core/Other/: KeyCodes.h  Log.h
Engine/Source/Core/Resource/: Resource.cpp  Resource.h
Engine/Source/Core/Scripting/: LuaScripting.cpp  LuaScripting.h
Engine/Source/Core/Systems/: CameraSystem.h  DirectionalLightSystem.h  EditorCameraSystem.h  GridRendererSystem.h  MeshRendererSystem.h  ModelRendererSystem.h  PhysicsSystem.h  PointLightSystem.h  SkyBoxRendererSystem.h  SpotLightSystem.h  SpriteRendererSystem.h
Engine/Source/Core/Timer/: Timer.cpp  Timer.h
Engine/Source/Core/Window/: Window.h
Engine/Source/Editor/: Colors.h  UiLayer.cpp  UiLayer.h
Engine/Source/Editor/CompUIs/: CSUI.h  CameraUI.h  CompUI.h  DirectLightUI.h  MeshUI.h  ModelRenderUI.h  PointLightUI.h  RigidbodyUI.h  TransformUI.h
Engine/Source/Editor/Panels/: ComponentsList.h  Console.h  ViewPort.h
Engine/Source/Events/: EventSystem.h  SceneEvents.h  WindowEvents.h
Engine/Source/Math/: Math.cpp  Math.h  Matrix.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  Vectors.h
Engine/Source/Physics/: Collider.cpp  Collider.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsWorld.cpp  PhysicsWorld.h  PlaneCollider.h  SphereCollider.cpp  SphereCollider.h  aabb.cpp  aabb.h  algo.h
Engine/Source/Renderer/: Material.h  Model.h  Renderer.h  SamplerBuffer.h  Shader.h  VertexArray.h
Engine/Source/Scene/: BaseSystem.h  EntityManager.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Types.h  XMLSerializer.cpp  XMLSerializer.h
Engine/Source/Serializer/: ModelsAndTextures.cpp  ModelsAndTextures.h  XMLSerializer.cpp
Engine/lib/: lib.sh
Engine/lib/includes/NFD/: nfd.hpp
Engine/lib/includes/gl3w/: gl3w.cpp
Engine/lib/includes/glad/: glad.cpp  glad.h
Engine/src/: App.cpp  Core.h  Headers.hpp  Setup.h  fractal.hpp  pch.h
Engine/src/Core/: Engine.cpp  Engine.h  Log.h
Engine/src/Core/ECS/Base/: Entity.h
Engine/src/Core/ECS/Components/: CsScript.h  EntityName.h  GravitySimulation.h  MeshRenderer.h  ModelRenderer.h  PointLight.h  SpriteRenderer.h
Engine/src/Core/ECS/Systems/: CSharpScriptSystem.h  CameraSystem.h  DirectionalLightSystem.h  EditorCameraSystem.h  GravitySystem.h  SkyBoxRendererSystem.h  SpriteRendererSystem.h
Engine/src/Core/Errors/: Errors.cpp  Errors.h
Engine/src/Core/Resource/: Resource.cpp  Resource.h
Engine/src/Core/Timer/: Timer.cpp
Engine/src/Core/Window/: Window.cpp  Window.h
Engine/src/ECS/: Components.h  ECS.h
Engine/src/ECS/Base/: ComponentFactory.h  Types.h
Engine/src/ECS/Components/: Camera.h  EntityName.h  GravitySimulation.h  MeshRenderer.h  ModelRenderer.h  PointLight.h  SpotLight.h  SpriteRenderer.h  Transform.h
Engine/src/ECS/Systems/: CSharpScriptSystem.h  CameraSystem.h  EditorCameraSystem.h  GravitySystem.h  GridRendererSystem.h  PointLightSystem.h  SpotLightSystem.h  SpriteRendererSystem.h
Engine/src/Editor/: UiLayer.cpp  UiLayer.h
Engine/src/Editor/CompUIs/: CSUI.h  CameraUI.h  CompUI.h  DirectLightUI.h  MeshUI.h  ModelRenderUI.h  NameTagUI.h  PointLightUI.h  RigidbodyUI.h  TransformUI.h
Engine/src/Editor/Controls/: Widgets.h
Engine/src/Engine/: Engine.cpp  Engine.h  String.h
Engine/src/Errors/: Errors.h
Engine/src/Events/: AppEvents.h  Dispatcher.h  Event.h  EventSystem.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Engine/src/Inputs/: KeyCodes.h
Engine/src/Interpreter/: Funcitons.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h
Engine/src/Math/: Math.cpp  Math.h  Matrix4  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
Engine/src/Objects/: ColorBuffer.h  DepthBuffer.h  GLMesh.h  GLQuad.h  Grid.h  Material.h  Model.h  SamplerBuffer.h  Shader.h  Vertex.h  VertexArray.h
Engine/src/Renderer/: ColorBuffer.h  DepthBuffer.h  GLMesh.h  GLQuad.h  Grid.h  Material.h  Model.h  Shader.h  Vertex.h
Engine/src/Resource/: Resource.cpp  Resource.h
Engine/src/Serializer/: AssetsSerializer.h  ModelsAndTextures.cpp  ModelsAndTextures.h  XMLSerializer.cpp  XMLSerializer.h
Engine/src/Timer/: Timer.h
FractalHub/: hub.cpp
Resource/: T.lua
Runtime/: CMakeLists.txt
Scripts/: lib.sh  (+1 more)
(+231 files in other folders)
